--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  
 }
 
 .layout_header {
@@ -26,13 +27,13 @@
 }
 .layout_content {
   padding: 0 2rem;
-  height: calc(100% - 126px);
+  height: 100%;
   display: flex;
   flex: 1;
   margin: 0 auto;
   max-width: 1200px;
   width: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .layout_footer {
@@ -92,4 +93,23 @@
   button {
     background-color: #f9f9f9;
   }
+}
+
+
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+  background-color: #99a9bf;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  background-color: #d3dce6;
+
 }
